# PixelEngine

./: CMakeLists.txt  README.md  disassemble-lib.sh
src/: characters.h  entity.c  entity.h  object.c  object.h  pixel_engine.c  pixel_engine.h  shader.c  shader.h  state.h  types.h  utils.c  utils.h  weapon.c  weapon.h
testing/: a.out  build.sh  crafting.h  default_template.c  enemy.c  enemy.h  items.h  main.c  space_game.c  test.sh  texture  texture_editor.c  weapon.c  weapon.h
